# LLM-coding-prompts

./: .gitignore  Python.md  README.md  Rust.md  USAGE_EXAMPLE.md  general.md  setup.fish
prompts/: general.md  python.md  rust.md
scripts/: check_dependencies.fish  copy_template.fish  generate_ai_prompts.fish  get_github_info.fish  get_project_info.fish  get_vcs_info.fish  initialize_vcs.fish  select_ai_providers.fish  select_language.fish  select_licenses.fish  select_template.fish  show_next_steps.fish
templates/: README.md
templates/prompts/: python.toml  rust.toml
templates/python/ai-prompts/: .cursorrules  CLAUDE.md  GEMINI.md
templates/python/ai-prompts/.cursor/rules/: python.mdc
templates/python/ai-prompts/.github/: copilot-instructions.md
templates/python/deep-learning/: .coveragerc  .gitignore  Makefile  README.md  evaluate.py  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  train.py
templates/python/deep-learning/.github/workflows/: ci.yml
templates/python/deep-learning/config/: example.toml
templates/python/deep-learning/src/: __init__.py  config.py  dataloader.py  trainer.py
templates/python/deep-learning/src/models/: __init__.py  base.py  cnn.py  hybrid.py  transformer.py
templates/python/deep-learning/src/utils/: __init__.py  metrics.py  visualization.py
templates/python/deep-learning/tests/: __init__.py  test_config.py  test_models.py
templates/python/minimal/: .coveragerc  .gitignore  README.md  mypy.ini  pyproject.toml  ruff.toml
templates/python/minimal/.github/workflows/: ci.yml
templates/python/minimal/src/: main.py
templates/rust/ai-prompts/: .cursorrules  CLAUDE.md  GEMINI.md
templates/rust/ai-prompts/.cursor/rules/: rust.mdc
templates/rust/ai-prompts/.github/: copilot-instructions.md
templates/rust/minimal/: .gitignore  Cargo.toml  README.md  clippy.toml
templates/rust/minimal/.github/workflows/: ci.yml
templates/rust/workspace/: .gitignore  Cargo.toml  README.md  clippy.toml  deny.toml
templates/rust/workspace/.github/workflows/: ci.yml
templates/rust/workspace/apps/{{PROJECT_NAME}}_cli/: Cargo.toml  README.md
templates/rust/workspace/apps/{{PROJECT_NAME}}_cli/src/: main.rs
templates/rust/workspace/libs/{{PROJECT_NAME}}_core/: Cargo.toml  README.md
templates/rust/workspace/libs/{{PROJECT_NAME}}_core/src/: error.rs  lib.rs  types.rs
templates/rust/workspace/libs/{{PROJECT_NAME}}_utils/: Cargo.toml  README.md
templates/rust/workspace/libs/{{PROJECT_NAME}}_utils/src/: lib.rs  logging.rs  string.rs
templates/rust/workspace/xtask/: Cargo.toml
templates/rust/workspace/xtask/src/: main.rs
templates/scripts/: generate_prompts.py  setup.fish
