[project]
name = "{{PROJECT_NAME}}"
description = "A modern deep learning project with PyTorch Lightning"
version = "0.1.0"
authors = [{ name = "{{AUTHOR_NAME}}", email = "{{AUTHOR_EMAIL}}" }]
readme = "README.md"
license = { text = "{{LICENSE_NAME}}" }
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "{{LICENSE_CLASSIFIER}}",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "lightning>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "tqdm>=4.65.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
]
vision = ["torchvision>=0.15.0", "Pillow>=10.0.0"]
nlp = ["transformers>=4.30.0", "tokenizers>=0.13.0"]
data = [
    "polars>=0.20.0",
    "pandas>=2.0.0",
    "seaborn>=0.12.0",
    "matplotlib>=3.7.0",
]
notebook = ["jupyter>=1.0.0", "ipywidgets>=8.0.0"]

[project.urls]
Homepage = "https://github.com/{{GITHUB_NAME}}/{{PROJECT_NAME}}"
Repository = "https://github.com/{{GITHUB_NAME}}/{{PROJECT_NAME}}"
Issues = "https://github.com/{{GITHUB_NAME}}/{{PROJECT_NAME}}/issues"

[project.scripts]
train = "src.train:main"
evaluate = "src.evaluate:main"
