[project]
name = "{{PROJECT_NAME}}"
description = "A modern Python project"
version = "0.1.0"
authors = [{ name = "{{AUTHOR_NAME}}", email = "{{AUTHOR_EMAIL}}" }]
readme = "README.md"
license = { text = "{{LICENSE_NAME}}" }
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: {{LICENSE_CLASSIFIER}}",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["pydantic-settings>=2.0.0"]

[project.optional-dependencies]
dev = ["ruff>=0.6.0", "pytest>=7.0.0", "pytest-cov>=4.0.0", "mypy>=1.0.0"]

[project.urls]
Homepage = "https://github.com/{{GITHUB_NAME}}/{{PROJECT_NAME}}"
Repository = "https://github.com/{{GITHUB_NAME}}/{{PROJECT_NAME}}"
Issues = "https://github.com/{{GITHUB_NAME}}/{{PROJECT_NAME}}/issues"

[project.scripts]
test = "src.main:main"
