[package]
name = "{{PROJECT_NAME}}"
version = "0.1.0"
edition = "2024"
authors = ["{{AUTHOR_NAME}} <{{AUTHOR_EMAIL}}>"]
description = "A modern Rust project"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/{{GITHUB_NAME}}/{{PROJECT_NAME}}"
keywords = ["rust", "cli", "example"]
categories = ["command-line-utilities"]
rust-version = "1.70"

[dependencies]

[dev-dependencies]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0

[workspace]
members = ["."]

[lints.rust]
unsafe_code = "forbid"
unused_import_braces = "warn"
unused_qualifications = "warn"

[lints.clippy]
enum_glob_use = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
