[package]
name = "{{PROJECT_NAME}}"
version = "0.1.0"
edition = "2024"
authors = ["{{AUTHOR_NAME}} <{{AUTHOR_EMAIL}}>"]
description = "A modern Rust project"
readme = "README.md"
license = "{{LICENSE_NAME}}"
repository = "https://github.com/{{GITHUB_NAME}}/{{PROJECT_NAME}}"
keywords = ["rust", "cli", "example"]
categories = ["command-line-utilities"]
rust-version = "1.85"

[dependencies]
# Error handling (required)
anyhow = "1.0"
thiserror = "1.0"

# Logging (required)
tracing = "0.1"
tracing-subscriber = "0.3"

# Security (for sensitive data)
secrecy = "0.8"

[dev-dependencies]
# Testing (required)
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0

[workspace]
members = ["."]

[lints.rust]
unsafe_code = "forbid"
unused_import_braces = "warn"
unused_qualifications = "warn"
