[workspace]
members = ["apps/*", "libs/*", "xtask"]
resolver = "2"

[workspace.dependencies]
# Error handling (required)
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Async
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging (required)
tracing = "0.1"
tracing-subscriber = "0.3"

# Security (for sensitive data)
secrecy = "0.8"

# Testing
tokio-test = "0.4"

# Internal dependencies
"{{PROJECT_NAME}}_core" = { path = "libs/{{PROJECT_NAME}}_core" }
"{{PROJECT_NAME}}_utils" = { path = "libs/{{PROJECT_NAME}}_utils" }

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

