[package]
name = "{{PROJECT_NAME}}_core"
version = "0.1.0"
edition = "2024"
authors = ["{{AUTHOR_NAME}} <{{AUTHOR_EMAIL}}>"]
description = "Core functionality for {{PROJECT_NAME}}"
license = "{{LICENSE_NAME}}"
repository = "https://github.com/{{GITHUB_NAME}}/{{PROJECT_NAME}}"
readme = "README.md"

[features]
default = ["std"]
std = []

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]